# agent-comparison

./: .gitignore  AGENTS.md  CONTRIBUTING.md  EVALUATION_REPORT_CODING_AGENT_TEMPLATE.md  EVALUATION_REPORT_ORCHESTRATION.md  INDEX_CODING_AGENTS_TEMPLATE.md  INDEX_ORCHESTRATION_TEMPLATE.md  PROMPT_TEMPLATE.md  README.md  setup-run.py
01-research-scraper/: CODING_AGENTS.md  EVALUATION_ORCHESTRATION.md  INDEX_CODING_AGENTS.md  (+2 more)
01-research-scraper/coding_agents/copilot_gpt-51-codex/: .envtemplate  README.md  pyproject.toml
01-research-scraper/coding_agents/copilot_gpt-51-codex/.report/: EVALUATION.md
01-research-scraper/coding_agents/copilot_gpt-51-codex/docs/: architecture.md
01-research-scraper/coding_agents/copilot_gpt-51-codex/frontend/: index.html  package-lock.json  package.json  vite.config.ts
01-research-scraper/coding_agents/copilot_gpt-51-codex/frontend/src/: App.tsx  api.ts  styles.css  types.ts
01-research-scraper/coding_agents/copilot_gpt-51-codex/frontend/src/hooks/: useEventStream.ts
01-research-scraper/coding_agents/copilot_gpt-51-codex/frontend/src/views/: Dashboard.tsx  PaperDetail.tsx  PaperList.tsx  TheoryMode.tsx
01-research-scraper/coding_agents/copilot_gpt-51-codex/src/researcher/: __init__.py  api.py  config.py  embeddings.py  events.py  graph.py  ingestion.py  llm.py  logging.py  models.py  storage.py  theory.py
01-research-scraper/coding_agents/copilot_gpt-51-codex/tests/: test_llm_fallback.py  test_storage.py
01-research-scraper/coding_agents/copilot_opus-45/: .env.example  README.md  pyproject.toml
01-research-scraper/coding_agents/copilot_opus-45/.report/: EVALUATION.md
01-research-scraper/coding_agents/copilot_opus-45/frontend/: index.html  package-lock.json  package.json  vite.config.ts
01-research-scraper/coding_agents/copilot_opus-45/frontend/src/: App.tsx  main.tsx
01-research-scraper/coding_agents/copilot_opus-45/frontend/src/api/: index.ts
01-research-scraper/coding_agents/copilot_opus-45/frontend/src/components/: Layout.tsx
01-research-scraper/coding_agents/copilot_opus-45/frontend/src/context/: StatusContext.tsx  WebSocketContext.tsx
01-research-scraper/coding_agents/copilot_opus-45/frontend/src/pages/: Dashboard.tsx  ImportTasks.tsx  PaperDetail.tsx  PaperList.tsx  TheoryMode.tsx  index.ts
01-research-scraper/coding_agents/copilot_opus-45/frontend/src/types/: index.ts
01-research-scraper/coding_agents/copilot_opus-45/src/researcher/: __init__.py  config.py
01-research-scraper/coding_agents/copilot_opus-45/src/researcher/api/: __init__.py  app.py
01-research-scraper/coding_agents/copilot_opus-45/src/researcher/api/routes/: __init__.py  dashboard.py  imports.py  papers.py  search.py  websocket.py
01-research-scraper/coding_agents/copilot_opus-45/src/researcher/models/: __init__.py  paper.py
01-research-scraper/coding_agents/copilot_opus-45/src/researcher/services/: __init__.py  arxiv.py  backfill.py  database.py  embedding.py  embedding_store.py  graph.py  import_manager.py  ingestion.py  llm.py
01-research-scraper/coding_agents/copilot_opus-45/tests/: __init__.py  conftest.py  test_api.py  test_database.py  test_embedding.py  test_graph.py
01-research-scraper/coding_agents/copilot_sonnet-45/: .gitignore  README.md  TESTING_REPORT.md  pyproject.toml
01-research-scraper/coding_agents/copilot_sonnet-45/.report/: EVALUATION.md  README.md  chat_history.md
01-research-scraper/coding_agents/copilot_sonnet-45/data/: embeddings.json  papertrail.json  tasks.json
01-research-scraper/coding_agents/copilot_sonnet-45/frontend/: index.html  package-lock.json  package.json  vite.config.js
01-research-scraper/coding_agents/copilot_sonnet-45/frontend/src/: App.css  App.jsx  api.js  main.jsx  websocket.js
01-research-scraper/coding_agents/copilot_sonnet-45/frontend/src/views/: DashboardView.jsx  PaperDetailView.jsx  PaperListView.jsx  TheoryModeView.jsx
01-research-scraper/coding_agents/copilot_sonnet-45/src/researcher/: __init__.py  backfill.py  config.py  continuous_import.py  database.py  embeddings.py  graph.py  ingestion.py  llm.py  logger.py  main.py  models.py  search.py
01-research-scraper/coding_agents/copilot_sonnet-45/tests/: test_core.py
01-research-scraper/coding_agents/cursor_kimi-k2/papertrail/: .envtemplate  index.html  main.py  package-lock.json  package.json  pyproject.toml
01-research-scraper/coding_agents/cursor_kimi-k2/papertrail/backend/: main.py
01-research-scraper/coding_agents/cursor_kimi-k2/papertrail/backend/api/: dashboard.py  papers.py  search.py  theory.py
01-research-scraper/coding_agents/cursor_kimi-k2/papertrail/backend/models/: database.py  schemas.py
01-research-scraper/coding_agents/cursor_kimi-k2/papertrail/backend/services/: continuous_import.py
01-research-scraper/coding_agents/cursor_kimi-k2/papertrail/backend/utils/: __init__.py  logging_config.py
01-research-scraper/coding_agents/cursor_kimi-k2/papertrail/papertrail/backend/api/: dashboard.py  papers.py  search.py  theory.py
01-research-scraper/coding_agents/cursor_kimi-k2/papertrail/papertrail/backend/models/: database.py  schemas.py
01-research-scraper/coding_agents/cursor_kimi-k2/papertrail/papertrail/frontend/: index.html  package.json
08-git-wiki/_base/: prompt.md  pyproject.toml
14-llm-social-deduction/_base/: package.json  prompt.md  pyproject.toml
_todo/03-image-gen/_base/: pyproject.toml
_todo/07-code-migration/_base/: .gitignore  prompt.md  pyproject.toml
_todo/13-deep-research-engine/_base/: pyproject.toml
(+65 files in other folders)
