[project]
name = "agent-comparison-14-amongweb"
version = "0.1.0"
description = "Web-based port of Among LLMs social deception game"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
