[project]
name = "researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pyro", email = "pyros.sd.models@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "tinydb>=4.8",
    "networkx>=3.2",
    "litellm>=1.43",
    "sentence-transformers>=3.0",
    "pypdf>=4.0",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "orjson>=3.10",
    "websockets>=12.0",
    "tenacity>=8.2",
    "scikit-learn>=1.5",
    "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock"
]

[project.scripts]
researcher = "researcher:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
