[project]
name = "researcher"
version = "0.1.0"
description = "Research paper catalog with GraphRAG, semantic search, and theory validation"
readme = "README.md"
authors = [
    { name = "Pyro", email = "pyros.sd.models@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "litellm>=1.50.0",
    "sentence-transformers>=3.2.0",
    "tinydb>=4.8.0",
    "networkx>=3.4.0",
    "websockets>=13.1",
    "python-multipart>=0.0.16",
    "httpx>=0.27.0",
    "arxiv>=2.1.0",
    "PyPDF2>=3.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "pytest>=9.0.1",
]

[project.scripts]
researcher = "researcher:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
