[project]
name = "agent_comparison_13_research_engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "ruff>=0.1.0"
]

# Agent must choose and add one or more of:
# burr (Apache Burr)
# lmql (LMQL)
# Or integrate with Towel (Clojure) or Flock as appropriate
